--- a/assets/done.html
+++ b/assets/done.html
@@ -10,34 +10,36 @@
 </head>
 <body>
 
-    
-
-    <div class="container container-configration container-lg container-sm container-xl">
-        <img src="https://media.giphy.com/media/3orntPDQO9sdQAZ4vT/giphy.gif" class="background-configration">
-        <img src="./image/background.png" alt="" class="background-screen-winner">
-        <div class="image-huychuong">
-            <img src="./image/huychuong.svg" alt="" style="width: 100%;height: 100%;">
-        </div>
-        <div class="row container-winner-content">
-            <div class="col-3">
-                <p style="font-size: 30px;font-weight: 550;text-align: center;">00:30</p>
+    <div class="mobie-done">
+        <div class="container container-configration container-lg container-sm container-xl">
+            <img src="https://media.giphy.com/media/3orntPDQO9sdQAZ4vT/giphy.gif" class="background-configration">
+            <img src="./image/background.png" alt="" class="background-screen-winner">
+            <div class="image-huychuong">
+                <img src="./image/huychuong.svg" alt="" style="width: 100%;height: 100%;">
             </div>
-            <div class="col-10">
-                <p style="font-size: 26px;font-weight: 550; text-align: center;">KẺ HỦY DIỆT LỊCH SỬ</p>
-            </div>
-            <div class="col-10" style="position: relative;">
-                <p style="font-size: 16px;text-align: center;">Thật tuyệt vời, bạn đã là một trong những người xuất sắc hoàn thành tour khám phá bảo tàng</p>
-                <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -25%;left: -16%;">
-                <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -11%;right: -13%;transform: rotate(-90deg);">
-            </div>
-            <div class="col-10" style="margin-top: 50px;">
-                <p style="font-size: 13px; text-align: center;">Hà Nội, ngày 14-02-2021</i></p>
-            </div>
-            <div class="col-4" style="padding: 8px;background-color: #77552F;border-radius: 10px;">
-                <p style="font-size: 20px;text-align: center; color: aliceblue;">CHIA SẺ</p>
+            <div class="row container-winner-content">
+                <div class="col-3">
+                    <p style="font-size: 30px;font-weight: 550;text-align: center;">00:30</p>
+                </div>
+                <div class="col-10">
+                    <p style="font-size: 26px;font-weight: 550; text-align: center;">KẺ HỦY DIỆT LỊCH SỬ</p>
+                </div>
+                <div class="col-10" style="position: relative;">
+                    <p style="font-size: 16px;text-align: center;">Thật tuyệt vời, bạn đã là một trong những người xuất sắc hoàn thành tour khám phá bảo tàng</p>
+                    <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -25%;left: -16%;">
+                    <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -11%;right: -13%;transform: rotate(-90deg);">
+                </div>
+                <div class="col-10" style="margin-top: 50px;">
+                    <p style="font-size: 13px; text-align: center;">Hà Nội, ngày 14-02-2021</i></p>
+                </div>
+                <div class="col-4" style="padding: 8px;background-color: #77552F;border-radius: 10px;">
+                    <p style="font-size: 20px;text-align: center; color: aliceblue;">CHIA SẺ</p>
+                </div>
             </div>
         </div>
     </div>
+
+    
     <!-- <img src="https://media.giphy.com/media/1oITLg0H3InSIUdSmP/giphy.gif" alt="">
     <img src="https://media.giphy.com/media/zCg4szr1lhr7qDN4X6/giphy.gif" alt="">
     <img src="https://media.giphy.com/media/3JS60LJ7gwKb2AKKZs/giphy.gif" alt="">
