--- a/assets/man1.html
+++ b/assets/man1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="container container-lg container-sm container-xl">
-        <div class="container-back_button" >
+    <div class="container-sm border">
+        <div class="container-back_button">
             <i class="bi bi-chevron-left"></i>
         </div>
         <div class="row">
@@ -25,30 +27,30 @@
                         <div class="row">
                             <div class="col-3">
                                 <div class="mySlides-artifacts">
-                                    <img src="../assets//image/Bao vat 1 1.png"/>
-                                    
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="mySlides-artifacts">
-                                    <img src="../assets//image/Bao vat 1 1.png"/>
+                                    <img src="../assets//image/Bao vat 1 1.png" />
 
                                 </div>
                             </div>
                             <div class="col-3">
                                 <div class="mySlides-artifacts">
-                                    <img src="../assets//image/Bao vat 1 1.png"/>
+                                    <img src="../assets//image/Bao vat 1 1.png" />
 
                                 </div>
                             </div>
                             <div class="col-3">
                                 <div class="mySlides-artifacts">
-                                    <img src="../assets//image/Bao vat 1 1.png"/>
+                                    <img src="../assets//image/Bao vat 1 1.png" />
+
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="mySlides-artifacts">
+                                    <img src="../assets//image/Bao vat 1 1.png" />
 
                                 </div>
                             </div>
                         </div>
-   
+
                     </div>
                 </div>
             </div>
@@ -63,11 +65,12 @@
     </div>
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 
 </body>
+
 </html>
