--- a/public/quetqr.html
+++ b/public/quetqr.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -14,53 +16,40 @@
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/batdau.css">
-
+    <link rel="stylesheet" href="./assets/css/scan.css">
 
 </head>
 
 <body>
     <div class="container-sm border main">
-        <div class="main-top row">
-
-        </div>
+        <!-- <div class="main-top row">
+        </div> -->
         <div class="main-body">
-
-            <a class="btn btn-primary btn-sm" href="#" role="button" id="opencamera">open camera</a>
-            <style>
-                .result {
-                    background-color: green;
-                    color: #fff;
-                    padding: 20px;
-                }
-                
-                .row {
-                    display: flex;
-                }
-            </style>
             <div class="row">
-                <div class="col">
-                    <div style="width:500px;" id="reader"></div>
+                <div class="col view-camera">
+                    <div style="width:100%;" id="reader"></div>
                 </div>
-                <div class="col" style="padding:30px;">
-                    <h4>SCAN RESULT</h4>
-                    <div id="result">Result Here</div>
-                </div>
+
             </div>
+            <div class="row control-camera flex-grow-1">
+                <div class="item-control-camera text-center col-6">
+                    <i class="bi bi-brightness-high"></i>
+                </div>
+                <div class="item-control-camera text-center col-6">
+                    <i class="bi bi-camera"></i>
+                    <i class="bi bi-camera-fill" style="display: none;"></i>
+                </div>
 
-
-
-
+            </div>
         </div>
 
         <div class="overlay-main">
 
         </div>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalSelect">
-            Open modal
-          </button>
+
         <div class="modal" id="modalSelect">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -76,6 +65,7 @@
                         <select name="" id="select-camera">
                             <option value=""></option>
                         </select>
+                        <div class="res text-break"></div>
                     </div>
 
                     <!-- Modal footer -->
@@ -89,10 +79,12 @@
             </div>
         </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./assets/js/lib/qrcode.js"></script>
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+        <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/lib/qrcode.js"></script>
         <script src="./assets/js/scan.js"></script>
 
 
