--- a/public/quetqr.html
+++ b/public/quetqr.html
@@ -38,7 +38,7 @@
                 <div class="item-control-camera text-center col-6">
                     <i class="bi bi-brightness-high"></i>
                 </div>
-                <div class="item-control-camera text-center col-6">
+                <div class="item-control-camera switch-camera text-center col-6 ">
                     <i class="bi bi-camera"></i>
                     <i class="bi bi-camera-fill" style="display: none;"></i>
                 </div>
@@ -56,7 +56,7 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Modal Heading</h4>
+                        <h4 class="modal-title">Chọn camera</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
 
