tối ưu lại màn 1

--- a/public/batdau.html
+++ b/public/batdau.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="row d-flex align-items-center justify-content-center mt-2 ">
-                <div class="col-4 btn btn-mobile">
+                <div class="col-4 btn btn-mobile btn-start">
                     Bắt đầu
                 </div>
 
