--- a/public/man1-base.html
+++ b/public/man1-base.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container-sm border main">
-        <div class="main-top row">
+        <div class="main-top row  gx-0">
             <div class="">
                 <div class="container-back_button">
                     <i class="bi bi-chevron-left"></i>
@@ -29,41 +29,56 @@
             </div>
 
             <div class="">
-                <div class="d-flex align-content-center justify-content-between m-auto container-home-and-question">
+                <div class="d-flex align-content-center justify-content-between container-home-and-question">
                     <i class="bi bi-house-fill"></i>
                     <i class="bi bi-patch-question-fill"></i>
                 </div>
             </div>
         </div>
         <div class="main-body">
-            <div class="row">
+            <div class="row gx-0">
                 <div class="artifacts">
                     <div class="mySlides-artifacts">
-                        <img src="../assets//image/Bao vat 1 1.png" />
+                        <div class="mySlides-artifacts--item"></div>
                     </div>
                     <div class="mySlides-artifacts">
-                        <img src="../assets//image/Bao vat 1 1.png" />
+                        <div class="mySlides-artifacts--item icon-choice"></div>
+
                     </div>
                     <div class="mySlides-artifacts">
-                        <img src="../assets//image/Bao vat 1 1.png" />
+                        <div class="mySlides-artifacts--item"></div>
+
                     </div>
                     <div class="mySlides-artifacts">
-                        <img src="../assets//image/Bao vat 1 1.png" />
+                        <div class="mySlides-artifacts--item"></div>
+
                     </div>
                     <div class="mySlides-artifacts">
-                        <img src="../assets//image/Bao vat 1 1.png" />
+                        <div class="mySlides-artifacts--item"></div>
+
                     </div>
                 </div>
             </div>
 
-            <div class="row container-decription-history">
+            <div class="row container-decription-history gx-0">
                 <p>Đây là bộ sưu tập thời đại Hùng Vương và giai đoạn văn hóa Phùng Nguyên, Phú Thọ</p>
             </div>
             <div class="row align-items-center justify-content-center">
-                <div class="col-3 btn btn-mobile">
+                <div class="col-3 btn btn-mobile btn-scan">
                     QUÉT
                 </div>
 
+            </div>
+        </div>
+
+        <div class="overlay-main">
+            <div class="guide">
+                <img class="item-guide image-guide" src="./image/Bot-1 1.png" alt="">
+                <div class="bg-main item-guide text-box-guide">
+                    <p>
+                        Xem hộp thành tựu để biết những điều đã đạt được. Cùng nhau giải đố để đi đến địa điểm tiếp theo. Và scan khi tới nơi.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -75,6 +90,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/man1-base.js"></script>
+
+
     <script>
         $(document).ready(function() {
             $('.artifacts').slick({
