--- a/public/quetqr.html
+++ b/public/quetqr.html
@@ -25,8 +25,13 @@
 
 <body>
     <div class="container-sm border main">
-        <!-- <div class="main-top row">
-        </div> -->
+        <div class="main-top row">
+            <div class="">
+                <div class="container-back_button">
+                    <i class="bi bi-chevron-left"></i>
+                </div>
+            </div>
+        </div>
         <div class="main-body">
             <div class="row">
                 <div class="col view-camera">
