--- a/public/done.html
+++ b/public/done.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/done.css">
+    <link rel="stylesheet" href="./assets/css/base.css">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
-    <div class="mobie-done">
+    <div class="container-sm border main">
         <div class="container container-configration container-lg container-sm container-xl">
             <img src="https://media.giphy.com/media/3orntPDQO9sdQAZ4vT/giphy.gif" class="background-configration">
             <img src="./image/background.png" alt="" class="background-screen-winner">
@@ -18,7 +19,7 @@
                 <img src="./image/huychuong.svg" alt="" style="width: 100%;height: 100%;">
             </div>
             <div class="row container-winner-content">
-                <div class="col-3">
+                <div class="col-3 done-clock">
                     <p style="font-size: 30px;font-weight: 550;text-align: center;">00:30</p>
                 </div>
                 <div class="col-10">
@@ -45,5 +46,14 @@
     <img src="https://media.giphy.com/media/3JS60LJ7gwKb2AKKZs/giphy.gif" alt="">
     <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="">
     <img src="https://media.giphy.com/media/0d3hxGn0klkut1SSsV/giphy.gif" alt=""> -->
+    <script>
+        let time =30;
+        const clock = document.querySelector('.done-clock p')
+        const changeTime =  setInterval(() => {
+            clock.innerHTML = `00:${time >10? '': '0'}${time-1}`    
+            time--;
+            if(time == 0) clearInterval(changeTime)
+            }, 1000)
+    </script>
 </body>
 </html>
