--- a/public/goiy.html
+++ b/public/goiy.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css//man1.css">
     <link rel="stylesheet" href="./css/done.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div class="mobie-done">
+    <div class="container-sm border main">
         <div class="container container-lg container-sm container-xl">
             <div class="container-back_button" >
                 <i class="bi bi-chevron-left"></i>
@@ -22,7 +23,9 @@
                     <i class="bi bi-patch-question-fill"></i>
                 </div>
                 <div class="col-10 col-sm-10 col-lg-10 artifacts" style="margin:auto">
+                    <p class="clock-goiy">00:15</p>
                     <div class="row">
+
                         <div class="col-11 container-artifacts" style="margin:auto">
                             <div class="row">
                                 <div class="col-3">
@@ -58,7 +61,7 @@
                     <p>Đây là bộ sưu tập thời đại Hùng Vương và giai đoạn văn hóa Phùng Nguyên, Phú Thọ</p>
                 </div>
     
-                <div class="col-4 col-sm-4 container-button-allow">
+                <div class="col-4 col-sm-4 container-button-allow" onclick="handleGotoScan(this)">
                     <p>QUÉT</p>
                 </div>
     
@@ -76,6 +79,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <script>
+        const handleGotoScan = (e) => {
+            window.location.href = 'http://127.0.0.1:5500/public/quetqr.html'
+        }
+        let time = 15;
+        const clock = document.querySelector('.clock-goiy');
+        const changeTime = setInterval(() => {
+            clock.innerHTML = `00:${time >10? '': '0'}${time-1}`;
+            time--;
+            if(time == 0) clearInterval(changeTime);
+        }, 1000)
+    </script>
 </body>
 </html>
