--- a/public/loser.html
+++ b/public/loser.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css//loser.css">
     <link rel="stylesheet" href="./css//man1.css">
     <link rel="stylesheet" href="./css/done.css">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div class="mobie-done">
+    <div class="container-sm border main">
         <div class="container container-lg container-sm container-xl screen-loser">
             <div class="container-back_button" >
                 <i class="bi bi-chevron-left"></i>
@@ -38,10 +39,10 @@
     
                         <div class="col-12 container-loser-buton" style="margin: auto;">
                             <div class="row" style="justify-content: space-around; align-items: center;">
-                                <div class="col-5" style="background-color: #77552F;">
+                                <div class="col-5" style="background-color: #77552F;" onclick="handleGotoAns(this)">
                                     <p>XEM GỢI Ý</p>
                                 </div>
-                                <div class="col-5" style="background-color: #77552F;">
+                                <div class="col-5" style="background-color: #77552F;" onclick="handleGotoNextQuis(this)">
                                     <p>CÂU TIẾP</p>
                                 </div>
                             </div>
@@ -60,7 +61,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <script>
+        const handleGotoNextQuis = (e) => {
+            window.location.href = 'http://127.0.0.1:5500/public/man1-base.html';
+        }
+        const handleGotoAns = (e) => {
+            window.location.href = 'http://127.0.0.1:5500/public/goiy.html';
+        }
+    </script>
 </body>
 </html>
     
