--- a/public/loser.html
+++ b/public/loser.html
@@ -63,10 +63,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script>
         const handleGotoNextQuis = (e) => {
-            window.location.href = 'http://127.0.0.1:5500/public/man1-base.html';
+            window.location.href = '/public/man1-base.html';
         }
         const handleGotoAns = (e) => {
-            window.location.href = 'http://127.0.0.1:5500/public/goiy.html';
+            window.location.href = '/public/goiy.html';
         }
     </script>
 </body>
