--- a/public/done.html
+++ b/public/done.html
@@ -1,59 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/done.css">
-    <link rel="stylesheet" href="./assets/css/base.css">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./css/done.css">
 </head>
-<body>
 
+<body>
     <div class="container-sm border main">
-        <div class="container container-configration container-lg container-sm container-xl">
-            <img src="https://media.giphy.com/media/3orntPDQO9sdQAZ4vT/giphy.gif" class="background-configration">
-            <img src="./image/background.png" alt="" class="background-screen-winner">
-            <div class="image-huychuong">
-                <img src="./image/huychuong.svg" alt="" style="width: 100%;height: 100%;">
-            </div>
-            <div class="row container-winner-content">
-                <div class="col-3 done-clock">
-                    <p style="font-size: 30px;font-weight: 550;text-align: center;">00:30</p>
-                </div>
-                <div class="col-10">
-                    <p style="font-size: 26px;font-weight: 550; text-align: center;">KẺ HỦY DIỆT LỊCH SỬ</p>
-                </div>
-                <div class="col-10" style="position: relative;">
-                    <p style="font-size: 16px;text-align: center;">Thật tuyệt vời, bạn đã là một trong những người xuất sắc hoàn thành tour khám phá bảo tàng</p>
-                    <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -25%;left: -16%;">
-                    <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="" style="width: 100px;height: 100px; position: absolute;top: -11%;right: -13%;transform: rotate(-90deg);">
-                </div>
-                <div class="col-10" style="margin-top: 50px;">
-                    <p style="font-size: 13px; text-align: center;">Hà Nội, ngày 14-02-2021</i></p>
-                </div>
-                <div class="col-4" style="padding: 8px;background-color: #77552F;border-radius: 10px;">
-                    <p style="font-size: 20px;text-align: center; color: aliceblue;">CHIA SẺ</p>
+        <div class="main-top row  gx-0">
+            <div class="">
+                <div class="container-back_button">
+                    <i class="bi bi-chevron-left"></i>
                 </div>
             </div>
         </div>
+        <div class="background-main">
+
+            <div class="background-screen-winner"></div>
+            <div class="image-huychuong"></div>
+            <!-- <div class="background-configration"></div> -->
+            <div class="js-container container-effect" style="top:0px !important;"></div>
+
+        </div>
+
+        <div class="main-body">
+            <div class="row container-winner-content">
+                <div class="done-clock">
+                    <p class="text-center done-clock-text fw-normal fs-3">00:30</p>
+                </div>
+                <div class="">
+                    <p class="text-center fw-bolder fs-4">KẺ HỦY DIỆT LỊCH SỬ</p>
+                </div>
+                <div class="" style="position: relative;">
+                    <p style="font-size: 16px;text-align: center;">Thật tuyệt vời, bạn đã là một trong những người xuất sắc hoàn thành tour khám phá bảo tàng</p>
+
+                    <div class="bg-winner-content"></div>
+                </div>
+
+                <div class="row d-flex align-items-center justify-content-center mt-2 ">
+                    <div class="">
+                        <p class="text-center">Hà Nội, ngày 14-02-2021</p>
+                    </div>
+                </div>
+
+                <div class="row d-flex align-items-center justify-content-center mt-2 ">
+                    <div class="col-4 btn bg-button btn-mobile">
+                        CHIA SẺ
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="overlay-main">
+
+        </div>
     </div>
 
-    
-    <!-- <img src="https://media.giphy.com/media/1oITLg0H3InSIUdSmP/giphy.gif" alt="">
-    <img src="https://media.giphy.com/media/zCg4szr1lhr7qDN4X6/giphy.gif" alt="">
-    <img src="https://media.giphy.com/media/3JS60LJ7gwKb2AKKZs/giphy.gif" alt="">
-    <img src="https://media.giphy.com/media/ibvHRGAar74spq79kn/giphy.gif" alt="">
-    <img src="https://media.giphy.com/media/0d3hxGn0klkut1SSsV/giphy.gif" alt=""> -->
-    <script>
-        let time =30;
-        const clock = document.querySelector('.done-clock p')
-        const changeTime =  setInterval(() => {
-            clock.innerHTML = `00:${time >10? '': '0'}${time-1}`    
-            time--;
-            if(time == 0) clearInterval(changeTime)
-            }, 1000)
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/effect-hoaroi.js"></script>
+
 </body>
+
 </html>
