thêm code bằng scss, Refactoring Code css

--- a/public/batdau.html
+++ b/public/batdau.html
@@ -16,7 +16,8 @@
 
 
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/batdau.css">
+    <!-- <link rel="stylesheet" href="./assets/css/batdau.css"> -->
+    <link rel="stylesheet" href="./assets/css/start.css">
 
 
 </head>
