--- a/public/quetqr.html
+++ b/public/quetqr.html
@@ -33,21 +33,23 @@
             </div>
         </div>
         <div class="main-body">
-            <div class="row">
-                <div class="col view-camera">
-                    <div style="width:100%;" id="reader"></div>
-                </div>
+            <div class="camera">
+                <div class="row">
+                    <div class="col view-camera">
+                        <div style="width:100%;" id="reader"></div>
+                    </div>
 
-            </div>
-            <div class="row control-camera flex-grow-1">
-                <div class="item-control-camera text-center col-6">
-                    <i class="bi bi-brightness-high"></i>
                 </div>
-                <div class="item-control-camera switch-camera text-center col-6 ">
-                    <i class="bi bi-camera"></i>
-                    <i class="bi bi-camera-fill" style="display: none;"></i>
-                </div>
+                <div class="row control-camera flex-grow-1">
+                    <div class="item-control-camera text-center col-6">
+                        <i class="bi bi-brightness-high"></i>
+                    </div>
+                    <div class="item-control-camera switch-camera text-center col-6 ">
+                        <i class="bi bi-camera"></i>
+                        <i class="bi bi-camera-fill" style="display: none;"></i>
+                    </div>
 
+                </div>
             </div>
         </div>
 
