--- a/public/done.html
+++ b/public/done.html
@@ -8,12 +8,14 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./css/done.css">
+    <!-- <link rel="stylesheet" href="./css/done.css"> -->
+    <link rel="stylesheet" href="./assets/css/done.css">
+
 </head>
 
 <body>
     <div class="container-sm border main">
-        <div class="main-top row  gx-0">
+        <div class="main-top row gx-0">
             <div class="">
                 <div class="container-back_button">
                     <i class="bi bi-chevron-left"></i>
@@ -67,6 +69,16 @@
 
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/effect-hoaroi.js"></script>
+
+    <script>
+        $(window).resize(function() {
+            $('.background-screen-winner').css('height', $('.background-screen-winner').width());
+        });
+
+        $(document).ready(function() {
+            $('.background-screen-winner').css('height', $('.background-screen-winner').width());
+        });
+    </script>
 
 </body>
 
