--- a/public/goiy.html
+++ b/public/goiy.html
@@ -20,7 +20,9 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 
     <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/man1-base.css">
+    <!-- <link rel="stylesheet" href="./assets/css/man1-base.css"> -->
+    <link rel="stylesheet" href="./assets/css/man1.css">
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
         </div>
         <div class="main-body">
             <div class="row gx-0">
-                <div class="artifacts">
+                <div class="artifacts shadow">
                     <div class="mySlides-artifacts">
                         <div class="mySlides-artifacts--item"></div>
                     </div>
@@ -67,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="row container-decription-history gx-0">
+            <div class="row container-decription-history gx-0 shadow">
                 <p>Đây là bộ sưu tập thời đại Hùng Vương và giai đoạn văn hóa Phùng Nguyên, Phú Thọ</p>
             </div>
             <div class="row align-items-center justify-content-center">
@@ -76,7 +78,7 @@
                 </div>
 
             </div>
-            <div class="row align-items-center justify-content-center gx-0">
+            <div class="row align-items-center justify-content-center gx-0 shadow">
                 <div class="col-12 container-suggestions">
                     <p>gợi ý</p>
                 </div>
@@ -102,6 +104,7 @@
 
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/man1-base.js"></script>
+
 
     <!-- <script>
         let time = 15;
